--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.8.1
 Django==5.1.4
 psycopg2==2.9.10
 sqlparse==0.5.3
-requests
+requests==2.32.3
 gigachat
-openpyxl
-pandas
+openpyxl==3.1.5
+pandas==2.2.3
